k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beauty
spec:
  replicas: 2
  selector:
    matchLabels:
      app: beauty
  template:
    metadata:
      labels:
        app: beauty
    spec:
      containers:
        - name: beauty
          image: docker-app/beauty:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: jwt-keys
              mountPath: /app/keys
              readOnly: true
      volumes:
        - name: jwt-keys
          secret:
            secretName: jwt-keys-secret
---
apiVersion: v1
kind: Service
metadata:
  name: beauty-service
spec:
  type: LoadBalancer
  selector:
    app: beauty
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
